--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-click==7.1.2
-Flask==2.3.0
-gunicorn==20.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==1.1.1
-Werkzeug==2.3.0
+flask==2.3.3
+gunicorn==21.2.0
